[package]
name = "apple-opensource-downloader"
version = "0.1.0"
edition = "2021"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"
description = "Easily download Apple's open source code from opensource.apple.com (AOS)"
keywords = ["apple", "aos"]

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.3", features = ["gzip", "tokio"] }
clap = "2.33"
futures = "0.3"
git2 = { version = "0.13", features = ["vendored-libgit2", "vendored-openssl"] }
regex = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
semver = "1.0"
tar = "0.4"
tokio = { version = "1.14", features = ["full"] }
tokio-tar = "0.3"
